# wrtmanager-ha-integration

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_PLAN.md  README.md  RELEASE.md  bandit-report.json  dev-setup.sh  hacs.json  openwrt_data_validation.json  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
custom_components/wrtmanager/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  device_manager.py  device_tracker.py  diagnostics.py  manifest.json  sensor.py  ubus_client.py
custom_components/wrtmanager/translations/: en.json
custom_components/wrtmanager/www/: wrtmanager-cards.js
dev/: analyze-run.sh  build-ha-snapshot.sh  follow-issue.sh  ha-env.sh  mock_ubus_server.py  pipeline.sh  post-implement.sh  registry.py  run-tests.sh  sessions.sh  setup-ha.py  setup-worktree.sh  teardown-worktree.sh  work-issue.sh
dev/pipeline/: __init__.py  __main__.py  claude.py  cli.py  engine.py  ha_client.py  infra.py  steps.py
dev/pipeline/tests/: conftest.py  test_claude.py  test_cli.py  test_engine.py  test_ha_client.py  test_infra.py  test_steps.py
dev/scenarios/: default.json
docs/: router-traffic-card.md  ssid-management-card.md  wired-client-detection.md
examples/: dashboard.yaml  router-traffic-card.yaml  traffic-card-simple.yaml  traffic-dashboard.yaml
scripts/: data_validation.py  setup_openwrt_ha_integration.sh
tests/: conftest.py  test_area_based_ssids.py  test_arp_clients.py  test_authentication_retry.py  test_binary_sensor_simple.py  test_binary_sensor_unique_id.py  test_config_flow.py  test_config_flow_scan_interval.py  test_coordinator_comprehensive.py  test_coordinator_simple.py  test_core_logic.py  test_cpu_load_sensors.py  test_device_manager.py  test_device_name_preservation.py  test_device_registry_fixes.py  test_dhcp_polling_optimization.py  test_diagnostics.py  test_disconnect_client.py  test_emoji_logging_cleanup.py  test_graceful_degradation.py  test_ha_deprecation_warnings.py  test_init.py  test_integration.py  test_interface_health_card.py  test_load_sensor.py  test_password_sanitization.py  test_regex_optimization.py  test_roaming_detection.py  test_scan_interval_integration.py  test_sensor_simple.py  test_setup_script_acl.py  test_signal_sensors.py  test_ssid_consolidation.py  test_ssid_functionality.py  test_ssid_iwinfo_fallback.py  test_topology_card_logic.py  test_traffic_sensors.py  test_ubus_coverage.py  test_ubus_direct.py  test_uptime_sensor.py  (+3 more)
tests/e2e/: conftest.py  test_entities.py
tests/e2e/browser/: ha-dashboard.spec.ts  package.json  playwright.config.ts
